--- a/themes/aquila/package.json
+++ b/themes/aquila/package.json
@@ -41,6 +41,7 @@
     "@wordpress/hooks": "^4.32.0",
     "@wordpress/i18n": "^6.5.0",
     "autoprefixer": "^10.4.21",
+    "chokidar": "^4.0.3",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
