--- a/themes/aquila/package.json
+++ b/themes/aquila/package.json
@@ -2,14 +2,15 @@
   "name": "aquila",
   "version": "1.0.0",
   "description": "Theme Aquila.",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "author": "Imran Sayed,",
   "license": "GPL-3.0-or-later",
   "scripts": {
     "dev": "vite build --watch",
     "build": "vite build",
-    "lint": "eslint src --ext .js,.jsx",
-    "format": "prettier --write \"src/**/*.{js,jsx,scss,css,json,md}\"",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,scss,css,json,md}\"",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -29,6 +30,18 @@
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/addon-interactions": "8.6.14",
     "@storybook/html-webpack5": "8.6.14",
+    "@types/dompurify": "^3.2.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@types/wordpress__api-fetch": "^3.23.1",
+    "@types/wordpress__block-editor": "^14.21.1",
+    "@types/wordpress__blocks": "^12.5.18",
+    "@types/wordpress__components": "^23.8.0",
+    "@types/wordpress__data": "^7.0.0",
+    "@types/wordpress__dom-ready": "^2.9.0",
+    "@types/wordpress__element": "^2.14.1",
+    "@types/wordpress__hooks": "^2.11.0",
+    "@types/wordpress__i18n": "^3.11.0",
     "@vitejs/plugin-react": "^5.0.4",
     "@wordpress/api-fetch": "^7.32.0",
     "@wordpress/block-editor": "^15.5.0",
@@ -38,10 +51,11 @@
     "@wordpress/dependency-extraction-webpack-plugin": "^6.32.0",
     "@wordpress/dom-ready": "^4.32.0",
     "@wordpress/element": "^6.32.0",
+    "@wordpress/eslint-plugin": "^22.20.0",
     "@wordpress/hooks": "^4.32.0",
     "@wordpress/i18n": "^6.5.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.37.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "mini-css-extract-plugin": "^2.9.4",
@@ -49,6 +63,7 @@
     "prettier": "^3.6.2",
     "sass": "^1.93.2",
     "storybook": "8.6.14",
+    "typescript": "^5.9.3",
     "vite": "^7.1.9"
   }
 }
