--- a/themes/aquila/package.json
+++ b/themes/aquila/package.json
@@ -2,15 +2,15 @@
   "name": "aquila",
   "version": "1.0.0",
   "description": "Theme Aquila.",
-  "main": "src/index.ts",
+  "main": "src/index.js",
   "author": "Imran Sayed,",
   "license": "GPL-3.0-or-later",
   "scripts": {
     "dev": "vite build --watch",
     "build": "vite build",
-    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,scss,css,json,md}\"",
+    "lint": "eslint src --ext .js,.jsx",
+    "lint:fix": "eslint src --ext .js,.jsx --fix",
+    "format": "prettier --write \"src/**/*.{js,jsx,scss,css,json,md}\"",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -19,8 +19,8 @@
     "@wordpress/icons": "^10.21.0",
     "classnames": "^2.5.1",
     "dompurify": "^3.2.5",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
@@ -30,18 +30,6 @@
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/addon-interactions": "8.6.14",
     "@storybook/html-webpack5": "8.6.14",
-    "@types/dompurify": "^3.2.0",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "@types/wordpress__api-fetch": "^3.23.1",
-    "@types/wordpress__block-editor": "^14.21.1",
-    "@types/wordpress__blocks": "^12.5.18",
-    "@types/wordpress__components": "^23.8.0",
-    "@types/wordpress__data": "^7.0.0",
-    "@types/wordpress__dom-ready": "^2.9.0",
-    "@types/wordpress__element": "^2.14.1",
-    "@types/wordpress__hooks": "^2.11.0",
-    "@types/wordpress__i18n": "^3.11.0",
     "@vitejs/plugin-react": "^5.0.4",
     "@wordpress/api-fetch": "^7.32.0",
     "@wordpress/block-editor": "^15.5.0",
@@ -63,7 +51,6 @@
     "prettier": "^3.6.2",
     "sass": "^1.93.2",
     "storybook": "8.6.14",
-    "typescript": "^5.9.3",
     "vite": "^7.1.9"
   }
 }
