--- a/themes/aquila/package.json
+++ b/themes/aquila/package.json
@@ -9,6 +9,15 @@
     "dev": "wp-scripts start",
     "build": "wp-scripts build",
     "type-check": "tsc --noEmit",
+    "test": "wp-scripts test-unit-js",
+    "test:watch": "wp-scripts test-unit-js --watch",
+    "test:coverage": "wp-scripts test-unit-js --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:codegen": "playwright codegen",
+    "playwright:install": "playwright install chromium",
     "lint": "wp-scripts lint-js",
     "lint:fix": "wp-scripts lint-js --fix",
     "lint:css": "wp-scripts lint-style",
@@ -31,10 +40,13 @@
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
     "@babel/runtime": "^7.28.4",
+    "@playwright/test": "^1.57.0",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/addon-interactions": "8.6.14",
     "@storybook/html-webpack5": "8.6.14",
     "@svgr/webpack": "^8.1.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
@@ -51,11 +63,13 @@
     "@wordpress/i18n": "^6.5.0",
     "@wordpress/scripts": "^31.0.0",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.3",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-webpack": "^0.13.10",
     "eslint-plugin-react": "^7.37.5",
     "mini-css-extract-plugin": "^2.9.4",
+    "playwright-bdd": "^8.4.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "sass": "^1.93.2",
